--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 <build>
   <pluginManagement>
     <plugins>
